# fastapi-tdd-docker

./: docker-compose.yml  pyproject.toml
project/: Dockerfile  Dockerfile.prod  pyproject.toml
project/api/: config.py  db.py  main.py
project/api/models/: pydantic.py  tortoise.py
project/api/router/: crud.py  ping.py  summaries.py
project/migrations/models/: 0_20220525114316_init.sql
project/tests/: conftest.py  test_ping.py  test_summaries.py
